# local-ai-launcher-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
src/: app.rs  command.rs  config.rs  discovery.rs  main.rs  server.rs
