[package]
name = "local_ai_launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
eframe = { version = "0.33", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.33"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
